pkgdata_DATA = index.html \
               gaminoinfo.html\
               gbaseinfocontent.html\
               gbui.html\
               gcai.html\
               gcbi.html\
               gcgr.html\
               gfindoriter.html\
               ggcsi.html\
               ggcskew.html\
               ggcwin.html\
               ggeneskew.html\
               ggenomicskew.html\
               gicdi.html\
               gphx.html\
               greporiter.html\
               gseq2png.html\
               gseqinfo.html\
               gshuffleseq.html

pkgdatadir=$(prefix)/share/EMBOSS/doc/html/embassy/kbws

