pkgdata_DATA = gaminoinfo.txt\
               gbaseinfocontent.txt\
               gbui.txt\
               gcai.txt\
               gcbi.txt\
               gcgr.txt\
               gfindoriter.txt\
               ggcsi.txt\
               ggcskew.txt\
               ggcwin.txt\
               ggeneskew.txt\
               ggenomicskew.txt\
               gicdi.txt\
               gphx.txt\
               greporiter.txt\
               gseq2png.txt\
               gseqinfo.txt\
               gshuffleseq.txt

pkgdatadir=$(prefix)/share/EMBOSS/doc/programs/text

